# PESU_IO

Assignment2/assignment2/: README.md  pyproject.toml
Assignment2/assignment2/src/assignment2/: crew.py  main.py
NaiveRAG/: .env  embedded_chunks.json  output.md  rag.py
